[project]
name = "pacific-exporter"
version = "0.1.0"
description = ""
authors = [
    {name = "dangthaisan@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "weasyprint (>=65.1,<66.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
