[project]
name = "pacific-exporter"
version = "0.1.0"
description = ""
authors = [
    {name = "dangthaisan@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "sqlalchemy (>=2.0.41,<2.1.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-slugify (>=8.0.4,<9.0.0)",
    "pyside6 (>=6.9.0,<7.0.0)",
    "pyinstaller>=6.11.0,<7.0.0",
    "reportlab (>=4.4.6,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
